tests/ui/specialization/min_specialization/impl-on-opaque2.stderr
error[E0119]: conflicting implementations of trait `SpecTrait<(), ()>` for type `()`
  --> $DIR/impl-on-opaque2.rs:21:1
   |
LL | impl<U> SpecTrait<U, ()> for () {
   | ------------------------------- first implementation here
...
LL | impl SpecTrait<(), Opaque> for () {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0119`.
